# portalonline-gmap-scraper

./: .gitignore  AGENTS.md  README.md  ROADMAP.md  manage.py  pyproject.toml
.factory/: hooks.json  memories.md
.factory/hooks/: docs-coverage.py  format.sh  protect-files.sh  scan-secrets.sh  test-on-edit.sh  update-readme.sh
.factory/rules/: code-quality.md  frontend-testing.md  frontend.md  python-testing.md  python.md  security.md  testing.md
.github/workflows/: ci.yml  publish.yml
backend/: README.md  __init__.py  main.py  manage.py  pyproject.toml  scraper.py  server.py
backend/api/: __init__.py  app.py  auth_utils.py  cleanup.py  deps.py  job_manager.py  models.py  store.py
backend/static/: index.html
backend/tests/: __init__.py  test_api_models.py  test_auth.py  test_config.py  test_job_manager.py  test_main.py  test_rate_limit.py  test_routes_admin.py  test_routes_health.py  test_routes_jobs.py  test_routes_queue.py  test_routes_results.py  test_routes_users.py  (+3 more)
docs/: PRD-backend-api.md  PRD-frontend-ui.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
portalonline_gmap_scraper/: __init__.py  config.py  main.py  scraper.py  server.py
scripts/: backend.service  build-frontend.sh  portalonline-gmap-scraper.service
tests/: test_api_models.py  test_auth.py  test_config.py  test_job_manager.py  test_main.py  test_rate_limit.py  test_routes_admin.py  test_routes_health.py  test_routes_jobs.py  test_routes_queue.py  test_routes_results.py  test_routes_users.py  test_sanitize.py  test_scraper.py  test_store.py
(+106 files in other folders)
